refactor: enterprise-grade exception handling, SOLID principles, and production config